--- a/fe/src/app/features/detail-page/layout/layout.component.html
+++ b/fe/src/app/features/detail-page/layout/layout.component.html
@@ -1,9 +1,20 @@
 <div class="wrapper">
     <div class="return-group hover-effect-yellow-bright">
         <i class="fa-solid fa-chevron-left"></i>
-        <a routerLink="/list" class="nothing return-group__text">
+        <span routerLink="/list" class="return-group__text">
             Trở về
-        </a>
+        </span>
+    </div>
+
+    <div class="preview-gallery-group">
+        <ul class="preview-gallery-group__list">
+            <li class="preview-gallery-group__list__item"></li>
+            <li class="preview-gallery-group__list__item"></li>
+            <li class="preview-gallery-group__list__item"></li>
+            <li class="preview-gallery-group__list__item"></li>
+            <li class="preview-gallery-group__list__item"></li>
+            <li class="preview-gallery-group__list__item"></li>
+        </ul>
     </div>
 
     <div class="logo-group">
@@ -14,24 +25,15 @@
             </a>
         </div>
     </div>
+
+    <section class="painting-group">
+
+        <div class="painting">
+            <img src="https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2" alt="" class="painting__img">
+        </div>
+
+    </section>
     
-    <div class="contact-service-group">
-        <i class="fa-solid fa-exclamation"></i>
-        <i class="fa-solid fa-question"></i>
-
-        <ul class="contact-service-group__panel-list">
-            <li class="contact-service-group__panel-list__item">
-                Liên hệ
-            </li>
-            <li class="contact-service-group__panel-list__item">
-                Điều khoản
-            </li>
-            <li class="contact-service-group__panel-list__item">
-                Chính sách
-            </li>
-        </ul>
-    </div>
-
     <section class="function-group-wrapper">
         <div class="function-group">
             <div class="function-group__user-group">
@@ -64,17 +66,6 @@
 
         <div class="checkout-group">
 
-        </div>
-
-        <div class="preview-gallery-group">
-            <ul class="preview-gallery-group__list">
-                <li class="preview-gallery-group__list__item"></li>
-                <li class="preview-gallery-group__list__item"></li>
-                <li class="preview-gallery-group__list__item"></li>
-                <li class="preview-gallery-group__list__item"></li>
-                <li class="preview-gallery-group__list__item"></li>
-                <li class="preview-gallery-group__list__item"></li>
-            </ul>
         </div>
     </section>
 </div>
