--- a/fe/src/app/auth/components/login-modal/login-modal.component.css
+++ b/fe/src/app/auth/components/login-modal/login-modal.component.css
@@ -15,7 +15,7 @@
 .login-modal-container {
     position: relative;
     border-radius: var(--border-radius-2);
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     height: 180px;
     width: 600px;
     margin-bottom: 15svh;
@@ -28,15 +28,15 @@
     top: 0px;
     right: -33px;
     padding: 1.8px 6px;
-    background-color: var(--dark-panel-color);
-    border: 1px solid var(--dark-border-color);
+    background-color: var(--current-panel-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-1);
 }
 
 .login-modal-container__left-side {
     width: 40%;
     height: 100%;
-    border-right: 1px solid var(--dark-border-color);
+    border-right: 1px solid var(--current-border-color);
     background: #15151552;
     -webkit-backdrop-filter: blur(6px);
     backdrop-filter: blur(6px);
@@ -58,7 +58,7 @@
 .login-modal-container__right-side {
     height: 100%;
     width: 60%;
-    background-color: var(--dark-panel-color);
+    background-color: var(--current-panel-color);
     padding: 18px;
     display: flex;
     flex-direction: column;
@@ -95,7 +95,7 @@
 
 .login-modal-container__right-side__body__choice {
     width: 100%;
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-1);
     display: flex;
     align-items: center;
@@ -126,7 +126,7 @@
     display: flex;
     justify-content: center;
     align-items: baseline;
-    border-right: 1px solid var(--dark-border-color);
+    border-right: 1px solid var(--current-border-color);
 }
 
 .login-modal-container__right-side__body__choice__icon-group.facebook i {
