--- a/fe/src/app/auth/components/user-panel/user-panel.component.css
+++ b/fe/src/app/auth/components/user-panel/user-panel.component.css
@@ -13,7 +13,7 @@
     object-fit: cover;
     object-position: center;
     border-radius: 100%;
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
 }
 
 .user-avatar.list {
@@ -29,8 +29,8 @@
     justify-content: center;
     top: 96%;
     right: -3%;
-    background-color: var(--dark-panel-color);
-    border: 1px solid var(--dark-border-color);
+    background-color: var(--current-panel-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     opacity: 0;
     pointer-events: none;
@@ -60,7 +60,7 @@
 }
 
 .dropdown__content + .dropdown__content {
-    border-top: 1px solid var(--dark-border-color);
+    border-top: 1px solid var(--current-border-color);
 }
 
 .fa-cart-shopping {
