--- a/fe/src/app/features/landing-page/components/landing-page-desktop-body/landing-page-desktop-body.component.css
+++ b/fe/src/app/features/landing-page/components/landing-page-desktop-body/landing-page-desktop-body.component.css
@@ -17,7 +17,7 @@
     overflow: hidden;
     width: 100%;
     min-height: 90px;
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     background-image: url("https://firebasestorage.googleapis.com/v0/b/test-firebase-image-81d97.appspot.com/o/Screenshot%202024-02-20%20151404.png?alt=media&token=971da7be-cae5-4f25-95c6-146b484ac3b2");
 }
@@ -67,7 +67,7 @@
     padding: 9px 18px;
     width: 210px;
     margin-top: 18px;
-    color: var(--dark-text-color);
+    color: var(--current-text-color);
     font-size: var(--fs-larger-1);
     background: linear-gradient(90deg, #3e008a, #3c0084, #7300ff, #3e008a);
     background-size: 400%;
@@ -140,7 +140,7 @@
     padding: 15px 18px;
     width: 100%;
     height: var(--service-height);
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     display: flex;
     flex-direction: column;
