--- a/fe/src/app/features/landing-page/components/landing-page-mobile-body/landing-page-mobile-body.component.css
+++ b/fe/src/app/features/landing-page/components/landing-page-mobile-body/landing-page-mobile-body.component.css
@@ -72,8 +72,8 @@
     width: 76%;
     height: 100%;
     clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
-    border-left: 1px solid var(--dark-border-color);
-    background-color: var(--dark-panel-color);
+    border-left: 1px solid var(--current-border-color);
+    background-color: var(--current-panel-color);
     z-index: 3;
     position: relative;
 }
@@ -123,7 +123,7 @@
     width: 120px;
     padding: 0;
     height: 66%;
-    color: var(--dark-text-color);
+    color: var(--current-text-color);
     background: linear-gradient(90deg, #3e008a, #3c0084, #7300ff, #3e008a);
     background-size: 400%;
     border-radius: 30px;
@@ -153,7 +153,7 @@
 }
 
 .banner__inside, .gallery__inside, .service__inside {
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     width: 100%;
     height: 100%;
@@ -167,7 +167,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     background-color: whitesmoke;
     border-radius: var(--border-radius-2);
     overflow: hidden;
@@ -193,7 +193,7 @@
 }
 
 .service__inside {
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     height: 100%;
     display: flex;
