--- a/fe/src/app/features/landing-page/components/landing-page-tablet-body/landing-page-tablet-body.component.css
+++ b/fe/src/app/features/landing-page/components/landing-page-tablet-body/landing-page-tablet-body.component.css
@@ -18,7 +18,7 @@
 }
 
 .left-side__banner {
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     width: 100%;
     border-radius: var(--border-radius-2);
     min-height: 120px;
@@ -86,7 +86,7 @@
     margin: 0 auto;
     margin-top: 6px;
     width: 171px;
-    color: var(--dark-text-color);
+    color: var(--current-text-color);
     background: linear-gradient(90deg, #3e008a, #3c0084, #7300ff, #3e008a);
     background-size: 400%;
     border-radius: 30px;
@@ -124,7 +124,7 @@
 }
 
 .left-side__service__inside {
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     height: 100%;
     display: flex;
@@ -172,7 +172,7 @@
 }
 
 .right-side__inside {
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     height: 100%;
     background-color: rgb(226, 226, 226);
