--- a/fe/src/app/features/landing-page/components/layout/landing-page-tablet-hamburger-content/landing-page-tablet-hamburger-content.component.css
+++ b/fe/src/app/features/landing-page/components/layout/landing-page-tablet-hamburger-content/landing-page-tablet-hamburger-content.component.css
@@ -11,8 +11,8 @@
     position: absolute;
     top: 0;
     right: 0;
-    border-left: 1px solid var(--dark-border-color);
-    background-color: var(--dark-panel-color);
+    border-left: 1px solid var(--current-border-color);
+    background-color: var(--current-panel-color);
     animation: responsive-tablet-content-slide-in 0.3s ease-in-out;
     display: flex;
     flex-direction: column;
@@ -22,8 +22,8 @@
 
 .wrapper__containter__contact {
     width: 100%;
-    background-color: var(--dark-background-color);
-    border: 1px solid var(--dark-border-color);
+    background-color: var(--current-background-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     margin-top: auto;
 }
@@ -34,7 +34,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 9px;
-    border-bottom: 1px solid var(--dark-border-color);
+    border-bottom: 1px solid var(--current-border-color);
 }
 
 .wrapper__containter__contact__top__item {
@@ -64,7 +64,7 @@
     padding-right: 4.2px;
     margin-top: 12px;
     border-radius: var(--border-radius-2);
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
 }
 
 .wrapper__containter__footer i {
@@ -73,12 +73,12 @@
 }
 
 .wrapper__containter__user-info {
-    background-color: var(--dark-background-color);
+    background-color: var(--current-background-color);
     display: flex;
     align-items: center;
     width: 100%;
     padding: 9px 18px;
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
 }
 
@@ -97,12 +97,12 @@
 
 .wrapper__containter__user-functionalities {
     margin-top: 12px;
-    background-color: var(--dark-background-color);
+    background-color: var(--current-background-color);
     display: flex;
     align-items: center;
     flex-direction: column;
     width: 100%;
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
 }
 
@@ -116,7 +116,7 @@
 }
 
 .wrapper__containter__user-functionalities__item + .wrapper__containter__user-functionalities__item {
-    border-top: 1px solid var(--dark-border-color);
+    border-top: 1px solid var(--current-border-color);
 }
 
 .wrapper__containter__user-functionalities__item i {
@@ -128,7 +128,7 @@
     .wrapper__containter {
         width: 100%;
         height: 60%;
-        border-bottom: 1px solid var(--dark-border-color);
+        border-bottom: 1px solid var(--current-border-color);
         border-left: none;
     }
 }
