--- a/fe/src/app/features/landing-page/components/top-info/top-info.component.css
+++ b/fe/src/app/features/landing-page/components/top-info/top-info.component.css
@@ -1,7 +1,7 @@
 .top-info {
     display: flex;
     justify-content: space-between;
-    background-color: var(--dark-panel-color);
+    background-color: var(--current-panel-color);
     padding: 9px 15px;
     border-bottom: 1px solid var(--light-border-color);
     width: 100%;
@@ -80,7 +80,7 @@
     height: 2px;
     width: 21px;
     display: block;
-    background-color: var(--dark-text-color);
+    background-color: var(--current-text-color);
     border-radius: 5px;
     transition: 0.3s ease;
 }
