--- a/fe/src/app/features/list-page/components/list-page-desktop-body/desktop-cart-dropdown/desktop-cart-dropdown.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/desktop-cart-dropdown/desktop-cart-dropdown.component.css
@@ -20,7 +20,7 @@
 }
 
 .list__item + .list__item {
-    border-top: 1px solid var(--dark-border-color);
+    border-top: 1px solid var(--current-border-color);
 }
 
 .list__item__image {
@@ -50,7 +50,7 @@
 }
 
 .link-group {
-    border-top: 1px solid var(--dark-border-color);
+    border-top: 1px solid var(--current-border-color);
     width: 100%;
     padding: 9px 18px;
     display: flex;
