--- a/fe/src/app/features/list-page/components/list-page-desktop-body/style-category/style-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/style-category/style-category.component.css
@@ -35,9 +35,9 @@
     gap: 9px;
     background-color: var(--level3-color);
     border-radius: var(--border-radius-1);
-    color: var(--dark-text-color);
+    color: var(--current-text-color);
     width: 100%;
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid var(--current-level2-border-color);
     padding: 15px 18px;
     padding-bottom: 12.9px;
     height: 66px;
@@ -72,7 +72,7 @@
 
 .wrapper__panel {
     background-color: var(--level3-color);
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid var(--current-level2-border-color);
     border-top: none;
     border-bottom-left-radius: var(--border-radius-1);
     border-bottom-right-radius: var(--border-radius-1);
@@ -95,7 +95,7 @@
 }
 
 .wrapper__panel__wrapper__level3-item + .wrapper__panel__wrapper__level3-item {
-    border-top: 1px solid var(--dark-level2-border-color);
+    border-top: 1px solid var(--current-level2-border-color);
 }
 
 .wrapper__panel__wrapper__level3-item__img {
@@ -155,9 +155,9 @@
     gap: 9px;
     background-color: var(--level3-color);
     border-radius: var(--border-radius-1);
-    color: var(--dark-text-color);
+    color: var(--current-text-color);
     width: 100%;
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid var(--current-level2-border-color);
     transition: 0.21s ease-in-out; 
     padding: 15px 18px;
     padding-bottom: 12.9px;
@@ -196,7 +196,7 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid var(--current-level2-border-color);
     border-top: none;
     border-bottom: none;
     transition: 0.21s ease-in-out;
@@ -226,7 +226,7 @@
     justify-content: space-between;
     height: 45px;
     padding: 0 9px;
-    border-bottom: 1px solid var(--dark-level2-border-color);
+    border-bottom: 1px solid var(--current-level2-border-color);
 }
 
 .wrapper__accordion-group-special__classify-group__panel__slash-group__slash {
@@ -267,7 +267,7 @@
     width: 100%;
     height: 72px;
     position: relative;
-    border-bottom: 1px solid var(--dark-level2-border-color);
+    border-bottom: 1px solid var(--current-level2-border-color);
     transition: 0.21s ease-in-out;
 }
 
