--- a/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/subject-category/subject-category.component.css
@@ -31,9 +31,9 @@
     gap: 9px;
     background-color: var(--level3-color);
     border-radius: var(--border-radius-1);
-    color: var(--dark-text-color);
+    color: var(--current-text-color);
     width: 100%;
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid var(--current-level2-border-color);
     padding: 15px 18px;
     padding-bottom: 12.9px;
     height: 66px;
@@ -77,7 +77,7 @@
 
 .wrapper__panel {
     background-color: var(--level3-color);
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid var(--current-level2-border-color);
     border-top: none;
     border-bottom-left-radius: var(--border-radius-1);
     border-bottom-right-radius: var(--border-radius-1);
@@ -97,7 +97,7 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid var(--current-level2-border-color);
     padding: 9px 18px;
     padding-bottom: 8.1px;
     border-radius: 27px;
