--- a/fe/src/app/features/list-page/components/list-page-desktop-body/topic-category/topic-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-body/topic-category/topic-category.component.css
@@ -35,10 +35,10 @@
     gap: 9px;
     background-color: var(--level3-color);
     border-radius: var(--border-radius-1);
-    color: var(--dark-text-color);
+    color: var(--current-text-color);
     width: 100%;
     height: 100%;
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid var(--current-level2-border-color);
     transition: 0.4s;
     padding: 15px 18px;
     padding-bottom: 14.1px;
