--- a/fe/src/app/features/list-page/components/list-page-desktop-side-bar/list-page-desktop-side-bar.component.css
+++ b/fe/src/app/features/list-page/components/list-page-desktop-side-bar/list-page-desktop-side-bar.component.css
@@ -9,10 +9,10 @@
 
 .left-side__inside__upper {
     border-radius: var(--border-radius-2);
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     width: 100%;
     height: 90px;
-    background-color: var(--dark-panel-color);
+    background-color: var(--current-panel-color);
     background: rgb(62, 0, 138);
     background: radial-gradient(circle, rgba(62, 0, 138, 1) 0%, rgba(197, 179, 88, 1) 100%);
     animation: list-page-left-upper-glowing-background 90s linear infinite;
@@ -46,7 +46,7 @@
 
 .left-side__inside__lower {
     flex: 1;
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     display: flex;
     flex-direction: column;
@@ -55,7 +55,7 @@
 
 .left-side__inside__lower__title {
     width: 100%;
-    border-bottom: 1px solid var(--dark-border-color);
+    border-bottom: 1px solid var(--current-border-color);
     padding: 6px;
     font-size: var(--fs-less-1);
     text-align: center;
@@ -73,7 +73,7 @@
 }
 
 .left-side__inside__lower__level1-list__item {
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-1);
     width: 100%;
     height: 60px;
@@ -110,7 +110,7 @@
     align-items: center;
     padding: 6px;
     gap: 12px;
-    border-top: 1px solid var(--dark-border-color);
+    border-top: 1px solid var(--current-border-color);
 }
 
 .left-side__inside__lower__term-and-service i {
