--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-category-tag.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-category-tag.component.css
@@ -3,7 +3,7 @@
     bottom: calc(100% + 1px);
     left: 0;
     width: 100%;
-    border-top: 1px solid var(--dark-border-color);
+    border-top: 1px solid var(--current-border-color);
     background-color: var(--level1-color);
     transition: 0.3s ease-in-out;
     animation: slide-right-left-fade 0.3s ease-in-out;
@@ -12,12 +12,12 @@
 .header {
     width: 100%;
     height: 42px;
-    border-bottom: 1px solid var(--dark-border-color);
+    border-bottom: 1px solid var(--current-border-color);
     padding: 15px;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: var(--dark-panel-color);
+    background-color: var(--current-panel-color);
 }
 
 .header__breadcrumb {
