--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level1-category/mobile-level1-category.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level1-category/mobile-level1-category.component.css
@@ -18,7 +18,7 @@
 }
 
 .level1-category-list__item {
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     width: 210px;
     height: 100%;
