--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-style/mobile-level2-category-style.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level2-category/mobile-level2-category-style/mobile-level2-category-style.component.css
@@ -17,7 +17,7 @@
 }
 
 .level2-category-list__item {
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     width: 210px;
     height: 100%;
