--- a/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level3-category/mobile-level3-category-subject/mobile-level3-category-subject.component.css
+++ b/fe/src/app/features/list-page/components/list-page-mobile/mobile-category-tag/mobile-level3-category/mobile-level3-category-subject/mobile-level3-category-subject.component.css
@@ -20,8 +20,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 1px solid var(--dark-level2-border-color);
+    border: 1px solid var(--current-level2-border-color);
     padding: 15px 30px;
+    width: -moz-fit-content;
     width: fit-content;
     border-radius: 27px;
     font-size: var(--fs-less);
