--- a/fe/src/app/features/list-page/components/list-page-tablet-side-bar/list-page-tablet-side-bar.component.css
+++ b/fe/src/app/features/list-page/components/list-page-tablet-side-bar/list-page-tablet-side-bar.component.css
@@ -8,10 +8,10 @@
 
 .left-side__inside__upper {
     border-radius: var(--border-radius-2);
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     width: 100%;
     aspect-ratio: 1/1;
-    background-color: var(--dark-panel-color);
+    background-color: var(--current-panel-color);
     background: rgb(62, 0, 138);
     background: radial-gradient(circle, rgba(62, 0, 138, 1) 0%, rgba(197, 179, 88, 1) 100%);
     animation: list-page-left-upper-glowing-background 90s linear infinite;
@@ -45,7 +45,7 @@
 
 .left-side__inside__lower {
     flex: 1;
-    border: 1px solid var(--dark-border-color);
+    border: 1px solid var(--current-border-color);
     border-radius: var(--border-radius-2);
     display: flex;
     flex-direction: column;
@@ -54,7 +54,7 @@
 
 .left-side__inside__lower__title {
     width: 100%;
-    border-bottom: 1px solid var(--dark-border-color);
+    border-bottom: 1px solid var(--current-border-color);
     padding: 6px;
     font-size: var(--fs-less-1);
     text-align: center;
@@ -95,7 +95,7 @@
     justify-content: center;
     align-items: center;
     gap: 6px;
-    border-top: 1px solid var(--dark-border-color);
+    border-top: 1px solid var(--current-border-color);
     position: relative;
 }
 
